--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -12,3 +12,27 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.logo {
+  width: 155px;
+  height: 29px;
+  text-indent: -9999px;
+  background-image: url("/logo-white.svg");
+  background-size: contain;
+}
+
+:global(.light) .logo {
+  background-image: url("/logo-black.svg");
+}
+
+.setting {
+  width: 20px;
+  height: 20px;
+  text-indent: -9999px;
+  background-image: url("/setting-white.svg");
+  background-size: contain;
+}
+
+:global(.light) .setting {
+  background-image: url("/setting-black.svg");
+}
