--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -16,21 +16,26 @@
   line-height: 26px;
 }
 
+:global(.light) .englishName {
+  color: #747474;
+}
+
 .content {
   display: flex;
+  align-items: flex-start;
   gap: 40px;
   margin: 30px 0;
 }
 
-.content > * {
+.content > div {
   flex-grow: 1;
   width: 50%;
 }
 
 .image {
   position: relative;
+  overflow: hidden;
   border-radius: 10px;
-  width: 100%;
   aspect-ratio: 1 / 1;
 }
 
